fix(mwpw-177207): adds visible Sort by: label to sort dropdown

--- a/less/components/consonant/filters/top/panel.less
+++ b/less/components/consonant/filters/top/panel.less
@@ -13,7 +13,7 @@
         &-inner {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: flex-end;
             align-items: flex-start;
             max-width: 100%;
         }
@@ -37,7 +37,7 @@
             justify-content: flex-end;
             align-items: flex-start;
             flex-grow: 1;
-            max-width: calc(~ '100% - ' @consonant-Select-width * 0.85 ~ ' - 8px');
+            max-width: calc(~ '100% - ' @consonant-Select-width ~ ' - 8px');
 
             &:first-child {
                 max-width: 100%;
@@ -157,7 +157,6 @@
         &-selectWrapper {
             display: flex;
             justify-content: flex-end;
-            width: @consonant-Select-width * 0.85;
             margin-right: 8px;
             order: -1;
             overflow: visible;
@@ -273,7 +272,6 @@
             }
 
             &-selectWrapper {
-                max-width: @consonant-Select-width;
                 order: 0;
                 margin-right: 0;
             }
@@ -316,13 +314,12 @@
 
             &-selectWrapper {
                 min-width: auto;
-                max-width: 160px;
                 margin-right: 0;
                 margin-left: 0;
 
                 & > div:first-child > button {
-                    padding-left: 12px;
-                    padding-right: 12px;
+                    // padding-left: 12px;
+                    padding-right: 24px;
                     border: 1px solid @consonantLightGrey200;
                     border-radius: 4px;
                 }
@@ -331,7 +328,7 @@
 
                 & > div:first-child {
                     &:after {
-                        right: 12px;
+                        right: 4px;
                     }
                 }
             }
