--- a/less/components/consonant/select.less
+++ b/less/components/consonant/select.less
@@ -134,8 +134,8 @@
             margin-bottom: 0;
 
             &:after {
-                width: 4px;
-                height: 4px;
+                width: 6px;
+                height: 6px;
                 border-color: @consonantDarkGrey400;
             }
         }
@@ -146,6 +146,31 @@
 
         &--autoWidth &-btn {
             max-width: 100%;
+        }
+
+        &.sort-by-Select {
+            display: flex;
+            width: auto;
+            justify-content: flex-end;
+            align-items: baseline;
+
+            label {
+                font-size: 13px;
+                width: auto;
+                padding-top: 2px;
+                text-align: right;
+                white-space: nowrap;
+            }
+
+            .consonant-Select-btn {
+                max-width: none;
+                padding-left: 6px;
+                padding-right: 20px;
+            }
+
+            &:after {
+                right: 4px;
+            }
         }
 
         @media @consonant-tablet-up {
